[Web Payments] Change error sheet Close button to primary button

Bug: 721607
Change-Id: I59de7742ef30793ae32ca5d41839ca226d1ecca9
Reviewed-on: https://chromium-review.googlesource.com/527254
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477990}
Former-commit-id: f1c191929b42a21aaa181698e569dca8618ed6df