chrome/browser/ui/views/payments/payment_request_sheet_controller.cc
@@ -291,6 +291,10 @@ base::string16 PaymentRequestSheetController::GetSecondaryButtonLabel() {
   return l10n_util::GetStringUTF16(IDS_PAYMENTS_CANCEL_PAYMENT);
 }
 
+bool PaymentRequestSheetController::ShouldShowSecondaryButton() {
+  return true;
+}
+
 bool PaymentRequestSheetController::ShouldShowHeaderBackArrow() {
   return true;
 }
@@ -392,15 +396,17 @@ void PaymentRequestSheetController::AddPrimaryButton(views::View* container) {
 }
 
 void PaymentRequestSheetController::AddSecondaryButton(views::View* container) {
-  secondary_button_ = std::unique_ptr<views::Button>(
-      views::MdTextButton::CreateSecondaryUiButton(this,
-                                                   GetSecondaryButtonLabel()));
-  secondary_button_->set_owned_by_client();
-  secondary_button_->set_tag(
-      static_cast<int>(PaymentRequestCommonTags::CLOSE_BUTTON_TAG));
-  secondary_button_->set_id(static_cast<int>(DialogViewID::CANCEL_BUTTON));
-  secondary_button_->SetFocusBehavior(views::View::FocusBehavior::ALWAYS);
-  container->AddChildView(secondary_button_.get());
+  if (ShouldShowSecondaryButton()) {
+    secondary_button_ = std::unique_ptr<views::Button>(
+        views::MdTextButton::CreateSecondaryUiButton(
+            this, GetSecondaryButtonLabel()));
+    secondary_button_->set_owned_by_client();
+    secondary_button_->set_tag(
+        static_cast<int>(PaymentRequestCommonTags::CLOSE_BUTTON_TAG));
+    secondary_button_->set_id(static_cast<int>(DialogViewID::CANCEL_BUTTON));
+    secondary_button_->SetFocusBehavior(views::View::FocusBehavior::ALWAYS);
+    container->AddChildView(secondary_button_.get());
+  }
 }
 
 }  // namespace payments
